--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -15,8 +15,10 @@ services:
     links:
       - database
     volumes:
-      - ../target/post-0.0.1-SNAPSHOT.jar:/post/app.jar
-      - ../photo/post/photo
-    command: /usr/java/openjdk-21/bin/java -jar /post/app.jar
-    depends_on:
-      - database
+      - ./target/mcpost-0.0.1-SNAPSHOT.jar:/post/app.jar
+      - ./photo:/post/photo
+    command: /usr/java/openjdk-17/bin/java -jar /app.jar
+    ports:
+      - "8091:8091"
+    restart: always
+    network_mode: mc-net
