--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
+		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>ru.skillbox</groupId>
 	<artifactId>mcpost</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mc-post</name>
+	<name>post</name>
 	<description>Post service for Social network</description>
 	<properties>
 		<java.version>17</java.version>
