--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,3 +1,9 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
+app:
+  feignClient:
+    url: "http://localhost:8080"
+eureka:
+  client:
+    enabled: false
