--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,9 +1,14 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
+
 app:
   feignClient:
     url: "http://localhost:8080"
+
 eureka:
+  instance:
+    hostname: localhost
   client:
-    enabled: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
