--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: local
+    active: server
   application:
     name: post
   datasource:
@@ -12,18 +12,11 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
   kafka:
     bootstrap-servers: 89.104.68.220:9094
+
 app:
   kafka:
     notificationTopic: "notification-top"
     kafkaMessageGroupId: "kafka-message-group-id"
-  request-validation:
-    validator-path: "http://89.104.68.220:8081/api/v1/auth/getclaims"
-eureka:
-  instance:
-    hostname: 89.104.68.220
-  client:
-    service-url:
-      defaultZone: http://89.104.68.220:8761/eureka
-    enabled: true
+
 server:
   port: 8091
